--- a/templates/oldreport_admin.html
+++ b/templates/oldreport_admin.html
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-    <p><h3> <a role="presentation" data-toggle="modal" data-target="#exampleModal" href="#"><span class="glyphicon glyphicon-send"></span> Zapisz </a></h3>
+    <p><h3> <a role="presentation" data-toggle="modal" data-target="#exampleModal" href="#"><span class="glyphicon glyphicon-floppy-disk"></span> Zapisz </a></h3>
 			<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			  <div class="modal-dialog" style="margin-top: 100px">
 				<div class="modal-content">
