--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,13 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog "></span> Opcje</a>
 
               <ul class="dropdown-menu">
+                  {% if admin %}
+                    <li><a href="/phpmyadmin"><span class="glyphicon glyphicon-th"></span> phpMyAdmin</a></li>
+                  {% endif %}
                   {% if logoutt %}
                 <li><a href="/logout"><span class="glyphicon glyphicon-lock"></span> Wyloguj</a></li>
                   {% endif %}
+
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Zalogowany jako:</li>
                 <li><a href="./"> <span class="glyphicon glyphicon-user" aria-hidden="true" </span> {{ username }} </a></li>
