--- a/templates/user.html
+++ b/templates/user.html
@@ -1,12 +1,26 @@
-{% extends "index.html" %}
+{% extends "adminpanel.html" %}
 
-{% block body %}
+{% block list %}
+
+<div class="container">
+  <div class="panel-group" style="margin-top: 20px">
+
+	{% for i in users  %}
+
+    <div class="panel panel-default">
+      <div class="panel-heading"><a href="/users/{{ i[2] }}">{{ i[1] }} {{ i[0] }}</a></div>
+      <div class="panel-body">
+        Login: <i>{{ i[2] }}   Hasło: {{ i[3] }}<br>Organizacja: {{ i[4] }}<br>Funkcja: {{ i[5] }}<br>Uprawnienia: {{ i[6] }}
+      </div>
+    </div>
 
 
-<ul class="nav nav-tabs">
-  <li role="presentation" class="active"><a href={{ zlecenie }}>Nowe zlecenie</a></li>
-  <li role="presentation"><a href="#">test</a></li>
-  <li role="presentation"><a href="#">Messages</a></li>
-</ul>
+	{% endfor %}
+  </div>
+</div>
 
 {% endblock %}
+
+
+
+
