--- a/templates/index.html
+++ b/templates/index.html
@@ -23,12 +23,15 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
              {% if usernav %}
+            <li><a href="/report/{{ username }}"><span class="glyphicon glyphicon-bell"></span> Aktualności</a></li>
             <li><a href="/report/{{ username }}"><span class="glyphicon glyphicon-send"></span> Nowe zlecenie</a></li>
             <li><a href="/list/{{ username }}"><span class="glyphicon glyphicon-list-alt"></span> Lista zleceń</a></li>
               {% endif %}
               {% if admin %}
+            <li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-stats"></span> Statystyki</a></li>
             <li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-wrench"></span> Panel administracyjny</a></li>
               {% endif %}
+            <li><a href="/list/{{ username }}"><span class="glyphicon glyphicon-search"></span> Szukaj</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog "></span> Opcje</a>
 
