--- a/templates/report_list.html
+++ b/templates/report_list.html
@@ -7,7 +7,7 @@
 
     {% for i in headers %}
 
-  <a href="/list/{{ username }}/send" class="btn btn-primary"> {{ i }} <span class="badge">{{ tr }}</span></a>
+  <a href="/report/{{ username }}/{{ i[1] }}" class="btn btn-primary"> {{ i[0] }} <span class="badge"></span></a>
 
     {% endfor %}
 
