--- a/templates/index.html
+++ b/templates/index.html
@@ -9,80 +9,66 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top {% if inverse %}navbar-inverse{% endif %}">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">HelpDesk</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-             {% if usernav %}
-            <li><a href="/report/{{ username }}"><span class="glyphicon glyphicon-bell"></span> Aktualności</a></li>
-            <li><a href="/report/{{ username }}"><span class="glyphicon glyphicon-send"></span> Nowe zlecenie</a></li>
-            <li><a href="/list/{{ username }}"><span class="glyphicon glyphicon-list-alt"></span> Lista zleceń</a></li>
-              {% endif %}
-              {% if admin %}
-            <li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-stats"></span> Statystyki</a></li>
-            <li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-wrench"></span> Panel administracyjny</a></li>
-              {% endif %}
-            <li><a href="/list/{{ username }}"><span class="glyphicon glyphicon-search"></span> Szukaj</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog "></span> Opcje</a>
-
-              <ul class="dropdown-menu">
-                  {% if admin %}
-                    <li><a href="/phpmyadmin"><span class="glyphicon glyphicon-th"></span> phpMyAdmin</a></li>
-                  {% endif %}
-                  {% if logoutt %}
-                <li><a href="/logout"><span class="glyphicon glyphicon-lock"></span> Wyloguj</a></li>
-                  {% endif %}
-
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Zalogowany jako:</li>
-                <li><a href="./"> <span class="glyphicon glyphicon-user" aria-hidden="true" </span> {{ username }} </a></li>
-              </ul>
-            </li>
-          </ul>
-
-        </div>
-      </div>
-    </nav>
-
-    <div class="container" style="margin-top: 40px">
-        {% with messages = get_flashed_messages() %}
-	        {% if messages %}
-	            {% for message in messages %}
-		            <div class="alert alert-danger alert-dismissible" role="alert" style="margin-top: 20px">
-		            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-			        {{message}}
-		            </div>
-		        {% endfor %}
-	        {% endif %}
-	    {% endwith %}
-
-
-
-
-        <div class="jumbotron" style="margin-top: 30px">
-            <div class="container-fluid" align="center" style="min-height:100%">
-	            <div class="container" style="min-height:100% width:80%">
-
-	                {% block body %}{% endblock %}
-
-	            </div>
-            </div>
-        </div>
-    </div>
-
-	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-
+	<nav class="navbar navbar-default navbar-fixed-top {% if inverse %}navbar-inverse{% endif %}">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">HelpDesk</a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-right">
+{% if usernav %}
+					<li><a href="/report/{{ username }}"><span class="glyphicon glyphicon-bell"></span> Aktualności</a></li>
+					<li><a href="/report/{{ username }}"><span class="glyphicon glyphicon-send"></span> Nowe zlecenie</a></li>
+					<li><a href="/list/{{ username }}"><span class="glyphicon glyphicon-list-alt"></span> Lista zleceń</a></li>
+{% endif %}
+{% if admin %}
+					<li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-stats"></span> Statystyki</a></li>
+					<li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-wrench"></span> Panel administracyjny</a></li>
+{% endif %}
+					<li><a href="/list/{{ username }}"><span class="glyphicon glyphicon-search"></span> Szukaj</a></li>
+					<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog "></span> Opcje</a>
+				<ul class="dropdown-menu">
+{% if admin %}
+					<li><a href="/phpmyadmin"><span class="glyphicon glyphicon-th"></span> phpMyAdmin</a></li>
+{% endif %}
+{% if logoutt %}
+					<li><a href="/logout"><span class="glyphicon glyphicon-lock"></span> Wyloguj</a></li>
+{% endif %}
+					<li role="separator" class="divider"></li>
+					<li class="dropdown-header">Zalogowany jako:</li>
+					<li><a href="./"> <span class="glyphicon glyphicon-user" aria-hidden="true"></span> </span> {{ username }} </a></li>
+				</ul>
+			</ul>
+			</div>
+		</div>
+	</nav>
+	<div class="container" style="margin-top: 40px">
+{% with messages = get_flashed_messages() %}
+	{% if messages %}
+		{% for message in messages %}
+		<div class="alert alert-danger alert-dismissible" role="alert" style="margin-top: 20px">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+			{{message}}
+		</div>
+		{% endfor %}
+	{% endif %}
+{% endwith %}
+		<div class="jumbotron" style="margin-top: 30px">
+			<div class="container-fluid" align="center" style="min-height:100%">
+				<div class="container" style="min-height:100% width:80%">
+					{% block body %}{% endblock %}
+				</div>
+			</div>
+		</div>
+	</div>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 </body>
-
 </html>
