--- a/templates/report_list.html
+++ b/templates/report_list.html
@@ -1,18 +1,11 @@
 {% extends "index.html" %}
 
 {% block body %}
-
-
 <div class="btn-group btn-group-justified">
-
-    {% for i in headers %}
-
-  <a href="/report/{{ username }}/{{ i[1] }}" class="btn btn-primary"> {{ i[0] }} <span class="badge"></span></a>
-
-    {% endfor %}
-
+		<a href="/report/{{ username }}/0/incydenty" class="btn btn-primary"> Incydenty <span class="badge"></span></a>
+	{% for i in headers %}
+		<a href="/report/{{ username }}/{{ i[1] }}" class="btn btn-primary"> {{ i[0] }} <span class="badge"></span></a>
+	{% endfor %}
 </div>
-
 {% block list %}{% endblock %}
-
 {% endblock %}
