--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container" style="margin-top: 40px">
+	<div class="container" style="margin-top: 40px; margin-left">
 {% with messages = get_flashed_messages() %}
 	{% if messages %}
 		{% for message in messages %}
