--- a/templates/oldreport_admin.html
+++ b/templates/oldreport_admin.html
@@ -3,6 +3,37 @@
 {% block body %}
 
 <form action="" class="form-horizontal" method="post" >
+	
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Priorytet</label>
+		<div class="col-sm-10">
+			<input class="form-control" id="focusedInput" type="text" name="priorytet" value="{{ info[15] }}">
+		</div>
+	</div>	
+	
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Ostatnia modyfikacja</label>
+		<div class="col-sm-10">
+			<input class="form-control" id="focusedInput" type="text" name="ostatniamodyfikacja" value="{{ info[16] }}">
+		</div>
+	</div>
+	
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Załącznik</label>
+		<div class="col-sm-10">
+			<input class="form-control" id="focusedInput" type="text" name="zalacznik" value="BETA">
+		</div>
+	</div>			
+	
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Deleguj do</label>
+		<div class="col-sm-10">
+			<input class="form-control" id="focusedInput" type="text" name="delegacja" value="{{ info[17] }}">
+		</div>
+	</div>		
+
+	<p>Nadawca: {{ name }} {{ surname }}</p>
+
 
   <div class="form-group">
     <label class="col-sm-2 control-label">Komórka zlecająca</label>
@@ -79,7 +110,8 @@
       <input class="form-control" id="focusedInput" type="text" name="data_zakonczenia" value="{{ info[11] }}">
     </div>
   </div>
-
+Zamrozić? 
+<input type="checkbox" name='checkbox' value="freeze">
     <p><h3> <a role="presentation" data-toggle="modal" data-target="#exampleModal" href="#"><span class="glyphicon glyphicon-floppy-disk"></span> Zapisz </a></h3>
 			<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			  <div class="modal-dialog" style="margin-top: 100px">
