--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 					<li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-stats"></span> Statystyki</a></li>
 					<li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-wrench"></span> Panel administracyjny</a></li>
 {% endif %}
-					<li><a href="/list/{{ username }}"><span class="glyphicon glyphicon-search"></span> Szukaj</a></li>
+					<li><a href="/search"><span class="glyphicon glyphicon-search"></span> Szukaj</a></li>
 					<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog "></span> Opcje</a>
 				<ul class="dropdown-menu">
