--- a/templates/search.html
+++ b/templates/search.html
@@ -1,30 +1,33 @@
 {% extends "index.html" %}
 
 {% block body %}
- <form>
+ <form method="post">
 	 <h3>Wyszukiwarka</h3>
   <div class="input-group">
     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-    <input id="email" type="text" class="form-control" name="name" placeholder="Nazwisko">
+    <input id="email" type="text" class="form-control" name="surname" placeholder="Nazwisko">
   </div>
   <div class="input-group">
-    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-    <input id="email" type="text" class="form-control" name="Data" placeholder="Data">
+    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+    <input id="email" type="text" class="form-control" name="date" placeholder="Data">
   </div>
   <div class="input-group">
-    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-    <input id="email" type="text" class="form-control" name="branch" placeholder="Funkcja">
+    <span class="input-group-addon"><i class="glyphicon glyphicon-bookmark"></i></span>
+    <input id="email" type="text" class="form-control" name="func" placeholder="Funkcja">
   </div>
    <div class="form-group">
+	   <br>
   <label for="sel1">Dział:</label>
-  <select class="form-control" id="sel1">
-    <option>1</option>
-    <option>2</option>
-    <option>3</option>
-    <option>4</option>
+  <select class="form-control" id="sel1" name="dzialy">
+    <option></option>
+    {% for i in branches %}
+    <option>{{ i }}</option>
+    {% endfor %}
   </select>
 </div> 
- <button type="sumbit" class="btn btn-success btn-block">Szukaj</button> 
+<button type="sumbit" class="btn btn-success">Szukaj</button>
 </form> 
+
+{% block searching %}{% endblock %}
 
 {% endblock %}
