--- a/templates/adminpanel.html
+++ b/templates/adminpanel.html
@@ -4,7 +4,7 @@
 	{% if admin %}
 	<div class="btn-group btn-group-justified">
 		<a href="/users" class="btn btn-primary"> Użytkownicy <span class="badge">{{ lenusers }}</span></a>
-		<a href="/list/{{ username }}/considered" class="btn btn-primary"> Debug </a>
+		<a href="/users/add" class="btn btn-primary"> Dodaj użytkownika </a>
 	{% endif %}
 	</div>
 {% block list %}{% endblock %}
