--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 {% if usernav %}
-					<li><a href="/report/{{ username }}"><span class="glyphicon glyphicon-bell"></span> Aktualności</a></li>
+					<li><a href="/aktualnosci"><span class="glyphicon glyphicon-bell"></span> Aktualności</a></li>
 					<li><a href="/report/{{ username }}"><span class="glyphicon glyphicon-send"></span> Nowe zlecenie</a></li>
 					<li><a href="/list/{{ username }}"><span class="glyphicon glyphicon-list-alt"></span> Lista zleceń</a></li>
 {% endif %}
