--- a/templates/report.html
+++ b/templates/report.html
@@ -119,7 +119,7 @@
 
 	<p>
 		<h3>
-				
+		<a role="presentation" data-toggle="modal" data-target="#exampleModal" href="#"><span class="glyphicon glyphicon-send"></span> Wyślij </a>		
 		</h3>
 		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog" style="margin-top: 100px">
