--- a/templates/search.html
+++ b/templates/search.html
@@ -17,7 +17,7 @@
   </div>
    <div class="form-group">
 	   <br>
-  <label for="sel1">Dział:</label>
+  <label for="sel1">Oddział:</label>
   <select class="form-control" id="sel1" name="dzialy">
     <option></option>
     {% for i in branches %}
