--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,13 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
+					
+{% if guest %}
+					<li><a href="/aktualnosci"><span class="glyphicon glyphicon-bell"></span> Aktualności</a></li>
+					<li><a href="/guest_report"><span class="glyphicon glyphicon-send"></span> Nowe zlecenie</a></li>
+					<li><a href="/home"><span class="glyphicon glyphicon-send"></span> Logowanie</a></li>
+{% endif %}	
+					
 {% if usernav %}
 					<li><a href="/aktualnosci"><span class="glyphicon glyphicon-bell"></span> Aktualności</a></li>
 					<li><a href="/report/{{ username }}"><span class="glyphicon glyphicon-send"></span> Nowe zlecenie</a></li>
@@ -30,8 +37,9 @@
 {% if admin %}
 					<li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-stats"></span> Statystyki</a></li>
 					<li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-wrench"></span> Panel administracyjny</a></li>
-{% endif %}
 					<li><a href="/search"><span class="glyphicon glyphicon-search"></span> Szukaj</a></li>
+{% endif %}
+					
 					<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog "></span> Opcje</a>
 				<ul class="dropdown-menu">
