--- a/templates/user.html
+++ b/templates/user.html
@@ -11,6 +11,10 @@
       <div class="panel-heading"><a href="/users/{{ i[7] }}">{{ i[1] }} {{ i[0] }}</a></div>
       <div class="panel-body">
         Login: <i>{{ i[2] }}   Hasło: {{ i[3] }}<br>Organizacja: {{ i[4] }}<br>Funkcja: {{ i[5] }}<br>Uprawnienia: {{ i[6] }}
+        {% if admin %}
+        <br>
+        <a href="/delete_user/{{ i[7] }}">Usuń</a>
+        {% endif %}
       </div>
     </div>
 
