--- a/templates/oldreport_admin.html
+++ b/templates/oldreport_admin.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <form action="" class="form-horizontal" method="post" >
-	
+	<h2><a href="/print/{{ uid }}">Drukuj</a></h2>
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Priorytet</label>
 		<div class="col-sm-10">
