--- a/templates/news.html
+++ b/templates/news.html
@@ -1,14 +1,76 @@
 {% extends "index.html" %}
 
 {% block body %}
+
+	{% if admin %}
+<form action="" class="form-horizontal" method="post" >	
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Temat</label>
+    <div class="col-sm-10">
+      <input class="form-control" id="focusedInput" type="text" name="temat" value="">
+    </div>
+  </div>	
+	
+	<div class="form-group">
+  <label for="sad">Treść</label>
+  <textarea class="form-control" rows="5" id="comment" name="tresc"></textarea>
+</div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Autor</label>
+    <div class="col-sm-10">
+      <input class="form-control" id="focusedInput" type="text" name="autor" value="">
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Data publikacji</label>
+    <div class="col-sm-10">
+      <input class="form-control" id="focusedInput" type="text" name="data_publikacji" value="{{ date }}">
+    </div>
+  </div>
+  
+ 	<p>
+		<h3>
+		<a role="presentation" data-toggle="modal" data-target="#exampleModal" href="#"><span class="glyphicon glyphicon-send"></span> Wyślij </a>		
+		</h3>
+		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog" style="margin-top: 100px">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title" id="exampleModalLabel">Potwierdzenie</h4>
+					</div>
+					<div class="modal-body">
+						<div class="container-fluid">
+							Czy napewno chcesz dodać zaktualizować?<br><br>
+							<button type="sumbit" class="btn btn-success">Wyślij</button>
+							<button type="button" class="btn btn-danger" data-dismiss="modal">Wróć</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</p>
+
+</form>
+<br>
+<p> 
+  
+   
+	{% endif %}
+
 <div class="container">
-  <h3>Aktualności</h3>
+	<br>
+  <h2>Aktualności</h2>
+  <br>
   {% for i in news %}
   <b><p>{{ i[0] }}:</p></b>
   <blockquote>
     <p>{{ i[1] }}</p>
     <footer>{{ i[3] }} {{ i[2] }}</footer>
   </blockquote>
+  <br>
   {% endfor %}
 </div>
 {% endblock %}
