--- a/templates/oldreport_admin.html
+++ b/templates/oldreport_admin.html
@@ -24,13 +24,13 @@
 			<input class="form-control" id="focusedInput" type="text" name="zalacznik" value="BETA">
 		</div>
 	</div>			
-	
-	<div class="form-group">
-		<label class="col-sm-2 control-label">Deleguj do</label>
-		<div class="col-sm-10">
-			<input class="form-control" id="focusedInput" type="text" name="delegacja" value="{{ info[17] }}">
-		</div>
-	</div>		
+<label class="col-sm-2 control-label">Deleguj do:</label>	
+  <select class="form-control" id="sel1" name="delegacja">
+    <option></option>
+    {% for i in admins %}
+    <option>{{ i[1] }}</option>
+    {% endfor %}
+  </select>	
 
 	<p>Nadawca: {{ name }} {{ surname }}</p>
 
