fixed incidents decoding

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 					<li><a href="/list/{{ username }}"><span class="glyphicon glyphicon-list-alt"></span> Lista zleceń</a></li>
 {% endif %}
 {% if admin %}
-					<li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-stats"></span> Statystyki</a></li>
+					<li><a href="/{{ username }}/stats"><span class="glyphicon glyphicon-stats"></span> Statystyki</a></li>
 					<li><a href="/adminpanel/{{ username }}"><span class="glyphicon glyphicon-wrench"></span> Panel administracyjny</a></li>
 					<li><a href="/search"><span class="glyphicon glyphicon-search"></span> Szukaj</a></li>
 {% endif %}
