--- a/templates/news.html
+++ b/templates/news.html
@@ -43,7 +43,7 @@
 					</div>
 					<div class="modal-body">
 						<div class="container-fluid">
-							Czy napewno chcesz dodać zaktualizować?<br><br>
+							Czy napewno chcesz opublikować wiadomość?<br><br>
 							<button type="sumbit" class="btn btn-success">Wyślij</button>
 							<button type="button" class="btn btn-danger" data-dismiss="modal">Wróć</button>
 						</div>
