Code optimalize and little bug fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
 {% endif %}
 					<li role="separator" class="divider"></li>
 					<li class="dropdown-header">Zalogowany jako:</li>
-					<li><a href="./"> <span class="glyphicon glyphicon-user" aria-hidden="true"></span> </span> {{ username }} </a></li>
+					<li><a href="#"> <span class="glyphicon glyphicon-user" aria-hidden="true"></span> </span> {{ username }} </a></li>
 				</ul>
 			</ul>
 			</div>
