--- a/templates/guest_report.html
+++ b/templates/guest_report.html
@@ -44,9 +44,9 @@
 		<textarea class="form-control" rows="9" id="comment" name="tresc"></textarea>
 	</div>
 
-	<label for="one">Dodaj załącznik</label>
+<!--	<label for="one">Dodaj załącznik</label>
 	<input type="file" name="file" ><br>
-
+-->
 	<div class="form-group">
 		<label for="sad">Uzasadnienie potrzeby realizacji zlecenia</label>
 		<textarea class="form-control" rows="5" id="comment" name="uzasadnienie_realizacji"></textarea>
