--- a/templates/home.html
+++ b/templates/home.html
@@ -3,14 +3,14 @@
 {% block body %}
 
 
-         <h1> <a role="presentation" data-toggle="modal" data-target="#exampleModal" href="#"><span class="glyphicon glyphicon-log-in"></span>  Logowanie  </a></h1>
+         <h2> <a role="presentation" data-toggle="modal" data-target="#exampleModal" href="#"><span class="glyphicon glyphicon-log-in"></span>  Zaloguj się  </a></h2>
 
 			<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			  <div class="modal-dialog" style="margin-top: 100px">
 				<div class="modal-content">
 				  <div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<h4 class="modal-title" id="exampleModalLabel">LOGOWANIE</h4>
+					<h4 class="modal-title" id="exampleModalLabel">Zaloguj się</h4>
 				  </div>
 				  <div class="modal-body">
 					  <div class="container-fluid">
