--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
 	<title>HelpDesk</title>
+	<meta charset="utf-8">
+	<meta name="Author" content="Albert Szadziński" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='icon.ong') }}">
+	
 </head>
 
 <body>
@@ -18,7 +20,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">HelpDesk</a>
+				<a class="navbar-brand" href="#">HelpDesk</a><small style="font-size:smaller" class="navbar-brand">beta</small>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
@@ -45,13 +47,15 @@
 				<ul class="dropdown-menu">
 {% if admin %}
 					<li><a href="/phpmyadmin"><span class="glyphicon glyphicon-th"></span> phpMyAdmin</a></li>
+					<li><a href="/dokumentacja"><span class="glyphicon glyphicon-book"></span> Dokumentacja</a></li>
+					<li><a href="/kontakt"><span class="glyphicon glyphicon-envelope"></span> Kontakt</a></li>
 {% endif %}
 {% if logoutt %}
-					<li><a href="/logout"><span class="glyphicon glyphicon-lock"></span> Wyloguj</a></li>
-{% endif %}
 					<li role="separator" class="divider"></li>
 					<li class="dropdown-header">Zalogowany jako:</li>
 					<li><a href="#"> <span class="glyphicon glyphicon-user" aria-hidden="true"></span> </span> {{ username }} </a></li>
+					<li><a href="/logout"><span class="glyphicon glyphicon-lock"></span> Wyloguj</a></li>
+{% endif %}					
 				</ul>
 			</ul>
 			</div>
@@ -76,7 +80,15 @@
 			</div>
 		</div>
 	</div>
+
+<footer class="footer">
+	<div class="container">
+		<p class="text-muted" style="text-align:right">Ostatnia modyfikacja: 03.10.2017</p>
+	</div>
+</footer>	
+	
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+
 </body>
 </html>
