--- a/server/App/templates/world/experiments.html
+++ b/server/App/templates/world/experiments.html
@@ -8,10 +8,13 @@
 					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 					<li data-target="#myCarousel" data-slide-to="1"></li>
 					<li data-target="#myCarousel" data-slide-to="2"></li>
+					<li data-target="#myCarousel" data-slide-to="3"></li>
+					<li data-target="#myCarousel" data-slide-to="4"></li>
+					<li data-target="#myCarousel" data-slide-to="5"></li>
 				</ol>
-				<div class="carousel-inner" style="width: 100%; height: 480px;">
-					<div class="carousel-item active" style="object-fit: cover !important;">
-						<img class="first-slide" src="https://st.mngbcn.com/static/assets/img/landings/blackFriday/black_shop.jpg" class="d-block w-100" alt="First slide">
+				<div class="carousel-inner" >
+					<div class="carousel-item active">
+						<img class="first-slide" src="{{imagee[0]}}" class="d-block w-100" alt="First slide" style="object-fit: cover ;width: 100%; height: 300px;">
 						<div class="container">
 							<div class="carousel-caption text-left">
 								<h1>Example headline.</h1>
@@ -21,26 +24,19 @@
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img class="second-slide" src="https://st.mngbcn.com/static/assets/img/landings/blackFriday/black_shop.jpg"alt="Second slide">
-						<div class="container">
-							<div class="carousel-caption">
-								<h1>Another example headline.</h1>
-								<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-								<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-							</div>
-						</div>
+						<img class="second-slide" src="{{imagee[1]}}" alt="Second slide" style="object-fit: cover ;width: 100%; height: 300px;">
 					</div>
 					<div class="carousel-item">
-						<img class="third-slide" src="https://st.mngbcn.com/static/assets/img/landings/blackFriday/black_shop.jpg" class="d-block w-100" alt="Third slide">
-						<div class="container">
-							<div class="carousel-caption text-right">
-								<h1>One more for good measure.</h1>
-								<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-								<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-							</div>
-						</div>
+						<img class="third-slide" src="{{imagee[2]}}" class="d-block w-100" alt="Third slide" style="object-fit: cover ;width: 100%; height: 300px;">
+					</div>
+					<div class="carousel-item">
+						<img class="third-slide" src="{{imagee[3]}}" class="d-block w-100" alt="Third slide" style="object-fit: cover ;width: 100%; height: 300px;">
+					</div>
+					<div class="carousel-item">
+						<img class="third-slide" src="{{imagee[4]}}" class="d-block w-100" alt="Third slide" style="object-fit: cover ;width: 100%; height: 300px;">
 					</div>
 				</div>
+				
 				<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="sr-only">Previous</span>
@@ -57,19 +53,19 @@
 			<div class="container marketing">
 				<div class="row">
 					<div class="col-lg-4">
-						<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+						<img class="rounded-circle" src="{{imagee[6]}}" alt="Generic placeholder image" width="140" height="140">
 						<h2>Heading</h2>
 						<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
 					</div><!-- /.col-lg-4 -->
 					<div class="col-lg-4">
-						<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+						<img class="rounded-circle" src="{{imagee[7]}}" alt="Generic placeholder image" width="140" height="140">
 						<h2>Heading</h2>
 						<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
 					</div><!-- /.col-lg-4 -->
 					<div class="col-lg-4">
-						<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+						<img class="rounded-circle" src="{{imagee[9]}}" alt="Generic placeholder image" width="140" height="140">
 						<h2>Heading</h2>
 						<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
@@ -83,7 +79,7 @@
 						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 					</div>
 					<div class="col-md-5">
-						<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+						<img src="{{imagee[5]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
 					</div>
 				</div>
 
@@ -95,7 +91,7 @@
 						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 					</div>
 					<div class="col-md-5 order-md-1">
-						<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+						<img src="{{imagee[8]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
 					</div>
 				</div>
 
@@ -107,17 +103,15 @@
 						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 					</div>
 					<div class="col-md-5">
-						<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+						<img src="{{imagee[2]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
 					</div>
 				</div>
 
 				<hr class="featurette-divider">
 			</div><!-- /.container -->
-
-
-			<footer class="container">
-				<p class="float-right"><a href="#">Back to top</a></p>
-				<p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+			
+			<footer class="container" style="margin-bottom:10px">
+						<p class="float-right"> <a href="#">Back to top</a></p>
 			</footer>
 		</div>
 	</div>
