Connected to local database: home, members, publications

--- a/server/App/templates/dashboard.html
+++ b/server/App/templates/dashboard.html
@@ -31,7 +31,7 @@
 						<div class="pos-f-t">
 							<div class="collapse" id="navbarToggleExternalContent">
 								<div class="bg-light p-4">
-									<h5 class="text-black h4">Admin</h5>
+									<small>{{username}}</small>
 									<small><span class="text-muted">Full permissions</span></small>
 											<ul class="navbar-nav px-3">
 												<li class="nav-item text-nowrap">
