--- a/server/App/templates/dashboard/files/publications.html
+++ b/server/App/templates/dashboard/files/publications.html
@@ -13,20 +13,22 @@
   <tbody>
 
 
+{% for pub in publications %}
 							<tr>
-								<td>2019</td>
-								<td>Three-body breakup in deuteron-deuteron collisions at 160 MeV including quasifree scattering</td>
-								<td>I. Ciepał</td>
+								<td>{{pub.year}}</td>
+								<td>{{pub.title}}</td>
+								<td>{{pub.author}}</td>
 								<td>
 									<div class="dropdown">
 											<a class="nav-link active text-secondary dropdown-toggle" type="button" id="dropdown1" data-toggle="dropdown"><i class="fa fa-cloud-download"></i></a>
 										<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-											<a class="dropdown-item"href="https://doi.org/10.1103/PhysRevC.100.024003">DOI</a>
-											<a class="dropdown-item" href="/publications/test.pdf">Download</a>
+											<a class="dropdown-item"href="{{pub.doi}}">DOI</a>
+											<a class="dropdown-item" href="/publications/{{pub.link}}">Download</a>
 										</div>
 									</div>
 								</td>
 							</tr>
+{% endfor %}
 
   </tbody>
 </table>
