--- a/server/App/templates/world/members.html
+++ b/server/App/templates/world/members.html
@@ -2,71 +2,25 @@
 {% block body %}
 	<div class="container">
 		<h2 class="mb-0 text-black lh-100">Members</h2>
+{% for org in organizations %}
 		<div class="my-3 p-3 bg-white rounded box-shadow">
-			<h6 class="border-bottom border-gray pb-2 mb-0">University of Silesia</h6>
+			<h6 class="border-bottom border-gray pb-2 mb-0">{{org[0]}}</h6>
+			
+{% for member in org[1] %}
 			<div class="media text-muted pt-3">
 				<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
 				<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
 					<div class="d-flex justify-content-between align-items-center w-100">
-						<strong class="text-gray-dark">Full Name</strong>
-					</div>
-					<span class="d-block">username@email.com</span>
-				</div>
-			</div>
-			<div class="media text-muted pt-3">
-				<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
-				<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-					<div class="d-flex justify-content-between align-items-center w-100">
-						<strong class="text-gray-dark">Full Name</strong>
-					</div>
-					<span class="d-block">username@email.com</span>
-				</div>
-			</div>
-			<div class="media text-muted pt-3">
-				<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
-				<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-					<div class="d-flex justify-content-between align-items-center w-100">
-						<strong class="text-gray-dark">Full Name</strong>
+						<strong class="text-gray-dark">{{member.name}} {{member.surname}}</strong>
 						<a href="#">Follow</a>
 					</div>
-					<span class="d-block">username@email.com</span>
+					<span class="d-block">{{member.email}}</span>
 				</div>
 			</div>
+{% endfor %}
 		</div>
-		
-<div class="my-3 p-3 bg-white rounded box-shadow">
-			<h6 class="border-bottom border-gray pb-2 mb-0">University of Silesia</h6>
-			<div class="media text-muted pt-3">
-				<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
-				<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-					<div class="d-flex justify-content-between align-items-center w-100">
-						<strong class="text-gray-dark">Full Name</strong>
-					</div>
-					<span class="d-block">username@email.com</span>
-				</div>
-			</div>
-			<div class="media text-muted pt-3">
-				<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
-				<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-					<div class="d-flex justify-content-between align-items-center w-100">
-						<strong class="text-gray-dark">Full Name</strong>
-					</div>
-					<span class="d-block">username@email.com</span>
-				</div>
-			</div>
-			<div class="media text-muted pt-3">
-				<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
-				<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-					<div class="d-flex justify-content-between align-items-center w-100">
-						<strong class="text-gray-dark">Full Name</strong>
-						<a href="#">Follow</a>
-					</div>
-					<span class="d-block">username@email.com</span>
-				</div>
-			</div>
-			<small class="d-block text-right mt-3">
-				<a href="#">All suggestions</a>
-			</small>
+{% endfor %}
+
 		</div>
 	</div>
 {% endblock %}
