--- a/server/App/templates/index.html
+++ b/server/App/templates/index.html
@@ -39,10 +39,6 @@
 
 
 				<li class="nav-item">
-				<a class="nav-link" href="#links">Links</a>
-				</li>
-
-				<li class="nav-item">
 					<a class="nav-link" href="#" data-toggle="modal" data-target="#ContactsModal">Contact</a>
 				</li>
 			</ul>
@@ -69,7 +65,7 @@
 
 	<nav class="navbar fixed-bottom navbar-expand-lg navbar-light bg-light">
 		<nav class="navbar navbar-light bg-light">
-			<small><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"> <b>v1.2b</b>  Last changes: 11.12.19</a></small>
+			<small><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">  <img src="https://img.shields.io/github/v/tag/aszadzinski/BINA-CCB.svg" class="figure-img img-fluid rounded" alt="badge-tag"> <img src="https://img.shields.io/github/last-commit/aszadzinski/BINA-CCB.svg" class="figure-img img-fluid rounded" alt="badge-last vommit"></a></small>
 	</nav>
 	<ul class="navbar-nav  flex-row ml-md-auto d-none d-md-flex">	
 		<li class="nav-item">
