--- a/server/App/templates/world/login.html
+++ b/server/App/templates/world/login.html
@@ -10,6 +10,7 @@
 							<img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
 							<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 							<div class="form-group">
+									<input type="text" class="form-control" id="login" name="login" placeholder="Login">
 									<input type="password" class="form-control" id="passwd" name="password" placeholder="Password">
 							</div>
 							<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
