--- a/server/App/templates/world/home.html
+++ b/server/App/templates/world/home.html
@@ -9,7 +9,7 @@
 {% for post in posts %}
           <div class="blog-post">
             <h2 class="blog-post-title">{{post.head}}</h2>
-            <p class="blog-post-meta">{{post.timestamp}} by <a href="#">{{post.author.username}}</a></p>
+            <p class="blog-post-meta">{{post.timestamp}} by <a href="#">Admin</a></p>
 {{post.body}}
           </div><hr>
 {% endfor %}
