--- a/server/App/templates/dashboard/files.html
+++ b/server/App/templates/dashboard/files.html
@@ -13,7 +13,7 @@
 				<ul class="nav nav-tabs card-header-tabs">
 					
 					<li class="nav-item">
-						<a class="nav-link active" href="/dashboard/publications">Publications</a>
+						<a class="nav-link" href="/dashboard/publications">Publications</a>
 					</li>
 
 					<li class="nav-item">
