Updated: modal function in files page

--- a/server/App/templates/dashboard/files.html
+++ b/server/App/templates/dashboard/files.html
@@ -4,7 +4,7 @@
 <nav aria-label="breadcrumb">
 	<ol class="breadcrumb">
 		<li class="breadcrumb-item"><a href="#">Files</a></li>
-		<li class="breadcrumb-item active" aria-current="page">Publications</li>
+		<li class="breadcrumb-item active" aria-current="page">{{crumb}}</li>
 	</ol>
 </nav>
 
@@ -17,7 +17,11 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="/dashboard/photos">Photos</a>
+						<a class="nav-link" href="/dashboard/publications">Thesis</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" href="/dashboard/photos">Gallery</a>
 					</li>
 
 					<li class="nav-item dropdown">
