Updated: 404page and footer

--- a/server/App/templates/404.html
+++ b/server/App/templates/404.html
@@ -1,6 +1,9 @@
 {% extends "index.html" %}
 {% block body %}
 <div class="container-fluid">
-	<center><h1>  <i class="fa fa-warning"> Page not found</i></h1></center>
+	<center><h1>  <i class="fa fa-warning" style="font-size:40px;color:red">  </i></h1>
+		<h1>Error: 404<br>Page not found</h1>
+		<img src="https://i.gifer.com/7VE.gif" class="img-fluid" alt="Responsive image">
+	</center>
 </div>
 {% endblock %}
