Added: New dashboard layout

--- a/server/App/templates/index.html
+++ b/server/App/templates/index.html
@@ -48,7 +48,7 @@
 				{% endif %}
 			</ul>
 
-			<ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+			<ul class="navbar-nav flex-row ml-md-auto  d-md-flex">
 
 				<li class="nav-item">
 					{% if guest %}
