--- a/server/App/templates/dashboard.html
+++ b/server/App/templates/dashboard.html
@@ -9,93 +9,60 @@
 		<title>BINA</title>
 </head>
 <body>
-	<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-		<a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">BINA@CCB </a>
-		<input class="form-control form-control-dark w-100" type="text" placeholder="Search TODO" aria-label="Search">
-		<ul class="navbar-nav px-3">
-			<li class="nav-item text-nowrap">
-				<a class="nav-link" href="/logout">Sign out</a>
-			</li>
-		</ul>
-	</nav>
 
-	<div class="container-fluid">
-		<div class="row">
-			<nav class="col-md-2 d-none d-md-block bg-light sidebar">
-				<div class="sidebar-sticky" style="height:100vh">
-					<ul class="nav flex-column">
+<div class="container-fluid">
+	<div class="row min-vh-100 flex-column flex-md-row">
+		<aside class="col-12 col-md-2 p-0 bg-dark flex-shrink-1">
+			<nav class="navbar navbar-expand navbar-dark bg-dark flex-md-column flex-row align-items-start py-2">
+				<div class="collapse navbar-collapse ">
+					<ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 						<li class="nav-item">
-							<a href="/" role="button" class="btn btn-outline-dark btn-sm btn-block" style="margin-top:5px"><i class="fa fa-backward"> Back to home</i></a>
+							<a class="nav-link pl-0 text-nowrap" href="/home"><h5><i class="fa fa-home fa-fw"></i> <span class="font-weight-bold">BINA@CCB</h5></span></a>
 						</li>
-						
-						<div class="pos-f-t">
-							<div class="collapse" id="navbarToggleExternalContent">
-								<div class="bg-light p-4">
-									<small>{{username}}</small>
-									<small><span class="text-muted">Full permissions</span></small>
-											<ul class="navbar-nav px-3">
-												<li class="nav-item text-nowrap">
-													<a class="nav-link active text-secondary" href="#">Edit information</a>
-												</li>
-												<li class="nav-item text-nowrap">
-													<a class="nav-link active text-secondary" href="#">Change password</a>
-												</li>
-												<li class="nav-item text-nowrap">
-													<a class="nav-link active text-secondary" href="#">Add user</a>
-												</li>
-											</ul>
-								</div>
-							</div>
-							<nav class="navbar navbar-dark bg-light">
-								<a class="nav-link active text-secondary dropdown-toggle" id="navbarDropdown" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-haspopup="true" aria-expanded="false"  href="#"><i class="fa fa-drivers-license-o"> Account</i></a>
-							</nav>
-						</div>
-						
-						<h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-							<small><span> <i class="fa fa-lock"> Internal</i> </span></small>
-							<a class="d-flex align-items-center text-muted" href="#">
-								<span data-feather="plus-circle"></span>
-							</a>
-						</h6>
+<div class="dropdown">
+  <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-id-card"></i> <span class="d-none d-md-inline"><small>{{username}}</small> </span></a>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+    <button class="dropdown-item" type="button">Edit informations</button>
+    <button class="dropdown-item" type="button">Change password</button>
+    <button class="dropdown-item" type="button">Add user</button>
+  </div>
+</div>
 
 						<li class="nav-item">
-							<a class="nav-link active text-secondary" href="/dashboard/publications">Files</a>
-						</li>
-						
-						<li class="nav-item">
-							<a class="nav-link active text-secondary" href="/dashboard/calendar">Calendar</a>
-						</li>
-						
-						<li class="nav-item">
-							<a class="nav-link active text-secondary" href="/dashboard/notes">Notes</a>
-						</li>
-						
-					</ul>
-					</ul>
-					<h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-						<small><span> <i class="fa fa-edit"> Edit pages </i> </span></small>
-						<a class="d-flex align-items-center text-muted" href="#">
-							<span data-feather="plus-circle"></span>
-						</a>
-					</h6>
-					<ul class="nav flex-column mb-2">
-						<li class="nav-item">
-							<a class="nav-link active text-secondary" href="/dashboard/edit/home">Home</a>
+							<a class="nav-link pl-0 disabled" href="/dashboard/notes"><span class="d-none d-md-inline"><hr><small>Data</small> </span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active text-secondary" href="/dashboard/edit/experiment">Experiments</a>
+							<a class="nav-link pl-0" href="/dashboard/publications"><i class="fa fa-folder"></i> <span class="d-none d-md-inline">Files</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active text-secondary" href="/dashboard/edit/files">Add files</a>
+							<a class="nav-link pl-0" href="/dashboard/calendar"><i class="fa fa-calendar"></i> <span class="d-none d-md-inline">Calendar</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active text-secondary" href="/dashboard/edit/members">Members</a>
+							<a class="nav-link pl-0" href="/dashboard/notes"><i class="fa fa-sticky-note"></i> <span class="d-none d-md-inline">Notes</span></a>
 						</li>
-					</ul>
-				</div>
-			</nav>
+						<li class="nav-item">
+							<a class="nav-link pl-0 disabled" href="/dashboard/notes"><span class="d-none d-md-inline"><hr><small>Edit pages</small> </span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link pl-0" href="/dashboard/edit/home"><i class="fa fa-home"></i> <span class="d-none d-md-inline">Home</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link pl-0" href="/dashboard/edit/experiment"><i class="fa fa-laptop"></i> <span class="d-none d-md-inline">Experiments</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link pl-0" href="/dashboard/edit/files"><i class="fa fa-plus-square"></i> <span class="d-none d-md-inline">Add files</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link pl-0" href="/dashboard/edit/members"><i class="fa fa-users"></i> <span class="d-none d-md-inline">Members</span></a>
+						</li>
 
-			<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+
+
+                    </ul>
+                </div>
+            </nav>
+        </aside>
+        <main class="col bg-faded py-3 flex-grow-1">
 	{% with messages = get_flashed_messages() %}
 		{% if messages %}
 			{% for message in messages %}
@@ -103,13 +70,14 @@
 			{% endfor %}
 		{% endif %}
 	{% endwith %}
-				<div class="container-fluid" style="margin-top: 5px; ">
-						{% block dashboard %}{% endblock %}
-				</div>
-			</main>
-		</div>
-	</div>
 	
+{% block dashboard %}{% endblock %}
+        </main>
+    </div>
+</div>
+
+
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
