--- a/server/App/templates/world/experiments.html
+++ b/server/App/templates/world/experiments.html
@@ -17,9 +17,9 @@
 						<img class="first-slide" src="{{imagee[0]}}" class="d-block w-100" alt="First slide" style="object-fit: cover ;width: 100%; height: 300px;">
 						<div class="container">
 							<div class="carousel-caption text-left">
-								<h1>Example headline.</h1>
+								<h1>test.</h1>
 								<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-								<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+								<p><a class="btn btn-lg btn-primary" href="#" role="button">Read more</a></p>
 							</div>
 						</div>
 					</div>
@@ -54,19 +54,19 @@
 				<div class="row">
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="{{imagee[6]}}" alt="Generic placeholder image" width="140" height="140">
-						<h2>Heading</h2>
+						<h2>BINA detector</h2>
 						<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
 					</div><!-- /.col-lg-4 -->
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="{{imagee[7]}}" alt="Generic placeholder image" width="140" height="140">
-						<h2>Heading</h2>
+						<h2>CCB</h2>
 						<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
 					</div><!-- /.col-lg-4 -->
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="{{imagee[9]}}" alt="Generic placeholder image" width="140" height="140">
-						<h2>Heading</h2>
+						<h2>xxx</h2>
 						<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
 					</div><!-- /.col-lg-4 -->
@@ -75,7 +75,7 @@
 				<hr class="featurette-divider">
 				<div class="row featurette">
 					<div class="col-md-7">
-						<h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+						<h2 class="featurette-heading">BINA detector <span class="text-muted">(Big Instrument for Nuclear-polarization Analysis)</span></h2>
 						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 					</div>
 					<div class="col-md-5">
@@ -87,7 +87,7 @@
 
 				<div class="row featurette">
 					<div class="col-md-7 order-md-2">
-						<h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+						<h2 class="featurette-heading">CCB <span class="text-muted">(Cyclotron Centre Bronowice)</span></h2>
 						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 					</div>
 					<div class="col-md-5 order-md-1">
@@ -99,7 +99,7 @@
 
 				<div class="row featurette">
 					<div class="col-md-7">
-						<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+						<h2 class="featurette-heading">XXXXXX<span class="text-muted">Checkmate.</span></h2>
 						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 					</div>
 					<div class="col-md-5">
