Updated: files group
Fixed: relative links
Updated: dashboard options
Added: filter and new file options in /dashboard/publications
Deleted: links and contact html files
Changed: project tree

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -24,19 +24,16 @@
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="experiments">Experiments</a>
+					<a class="nav-link" href="/experiments">Experiments</a>
 				</li>
-
-
 
 				<li class="nav-item">
 					<a class="nav-link" href="/publications">Publications</a>
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="members">Members</a>
+					<a class="nav-link" href="/members">Members</a>
 				</li>
-
 
 				<li class="nav-item">
 					<a class="nav-link" href="#" data-toggle="modal" data-target="#ContactsModal">Contact</a>
