--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -20,14 +20,34 @@
 							<a class="nav-link pl-0 text-nowrap" href="/home"><h5><i class="fa fa-home fa-fw"></i> <span class="font-weight-bold">BINA@CCB</h5></span></a>
 						</li>
 <div class="dropdown">
-  <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-id-card"></i> <span class="d-none d-md-inline"><small>{{username}}</small> </span></a>
+  <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-id-card"></i> <span class="d-none d-md-inline"><small>User</small> </span></a>
   <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
     <button class="dropdown-item" type="button">Edit informations</button>
     <button class="dropdown-item" type="button">Change password</button>
     <button class="dropdown-item" type="button">Add user</button>
   </div>
 </div>
+						<li class="nav-item">
+							<a class="nav-link pl-0 disabled" href="/dashboard/notes"><span class="d-none d-md-inline"><hr><small></small> </span></a>
+						</li>
 
+						<li class="nav-item">
+							<a class="nav-link pl-0" href="/dashboard/edit/files"><i class="fa fa-plus-square"></i> <span class="d-none d-md-inline">Add files</span></a>
+						</li>
+						<div class="dropdown ">
+							 <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-pencil-square-o"></i> <span class="d-none d-md-inline">Edit</span></a>
+							<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+								<li class="nav-item">
+									<a class="dropdown-item" href="/dashboard/edit/home"><i class="fa fa-home"></i> <span class="d-md-inline">Home</span></a>
+								</li>
+								<li class="nav-item">
+									<a class="dropdown-item" href="/dashboard/edit/experiment"><i class="fa fa-laptop"></i> <span class=" d-md-inline">Experiments</span></a>
+								</li>
+								<li class="nav-item">
+									<a class="dropdown-item" href="/dashboard/edit/members"><i class="fa fa-users"></i> <span class="d-md-inline">Members</span></a>
+								</li>
+							</div>
+						</div>
 						<li class="nav-item">
 							<a class="nav-link pl-0 disabled" href="/dashboard/notes"><span class="d-none d-md-inline"><hr><small>Data</small> </span></a>
 						</li>
@@ -40,22 +60,7 @@
 						<li class="nav-item">
 							<a class="nav-link pl-0" href="/dashboard/notes"><i class="fa fa-sticky-note"></i> <span class="d-none d-md-inline">Notes</span></a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link pl-0 disabled" href="/dashboard/notes"><span class="d-none d-md-inline"><hr><small>Edit pages</small> </span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link pl-0" href="/dashboard/edit/home"><i class="fa fa-home"></i> <span class="d-none d-md-inline">Home</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link pl-0" href="/dashboard/edit/experiment"><i class="fa fa-laptop"></i> <span class="d-none d-md-inline">Experiments</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link pl-0" href="/dashboard/edit/files"><i class="fa fa-plus-square"></i> <span class="d-none d-md-inline">Add files</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link pl-0" href="/dashboard/edit/members"><i class="fa fa-users"></i> <span class="d-none d-md-inline">Members</span></a>
-						</li>
-
+						
 
 
                     </ul>
